[package]
name = "cubiomes-gtk"
edition = "2021"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.9", package = "gtk4", features = ["gnome_47"] }
gl = "0.14.0"
cubiomes = { path = "../cubiomes" }
glow = "0.16.0"
epoxy = "0.1.0"

[features]
meson = []

[build-dependencies]
glib-build-tools = "0.21.0"

[dependencies.adw]
package = "libadwaita"
version = "0.7"
features = ["v1_6"]
